# rgb-control

./: .coverage  .gitignore  README.md  build_deb.sh  config.txt  conftest.py  controle  coverage.json  log2.md  log3.md  mvp.py  openrbg.service  perguntas.txt  plano.md  plano_modo_led.md  pyproject.toml  pyrightconfig.json  pytest.ini  rbg.sh  relatorio_diagnostico.md  requirements-dev.txt  requirements.txt  rgb-control_1.0-1_all.deb  rgb-control_1.0.10-1_all.deb  rgb-control_1.0.11-1_all.deb  rgb-control_1.0.17-1_all.deb  rgb-control_1.0.18-1_all.deb  rgb-control_1.0.19-1_all.deb  rgb-control_1.0.20-1_all.deb  rgb-control_1.0.6-1_all.deb  rgb-control_1.0.7-1_all.deb  rgb-control_1.0.8-1_all.deb  rgb-control_1.0.9-1_all.deb  run_tests.sh  t  teste_ok.py
builds/: rgb-control_1.0.1-1_all.deb  rgb-control_1.0.2-1_all.deb  rgb-control_1.0.3-1_all.deb  rgb-control_1.0.4-1_all.deb  rgb-control_1.0.5-1_all.deb  rgb-control_1.0.6-1_all.deb
docs/: ANALISE_ARQUITETURAL.md  TESTS.md  log0.md  log1.md  plano_v2.md  stack.md
mvp1/: CUSTOMIZACAO_CONTROLE_LED.md  INDEX.md  INSTALACAO_CONTROLE_LED.md  PLANO_CONTROLE_LED.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CONTROLE_LED.md  air-mouse-leds.service  controle_led.py  controle_led_v2.py  diagnostico_controle_led.sh  setup_controle_led.sh  teste_botoes.py
rgb_control/: main.py
scripts/: coverage_ratchet.py  docs_sync_check.py
tests/: conftest.py  test_backend.py  test_daemon.py  test_daemon_application.py  test_daemon_main_integration.py  test_gui_backend.py  test_gui_backend_clean.py  test_gui_window_layout.py  (+3 more)
(+114 files in other folders)
