[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rgb-control"
version = "1.0.11"
description = "Modern Desktop RGB Control - Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Gerson Santiago"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyfakefs>=5.3.0",
    "hypothesis>=6.98.0",
    "pyright>=1.1.350"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"

markers = [
    "unit: Unit tests (domain + application, sem I/O)",
    "integration: Integration tests (infrastructure, evdev, subprocess)",
    "gui: GUI tests (GTK4/Libadwaita headless)",
    "slow: Testes que demoram (E2E, stress tests)",
    "asyncio: Tests async"
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportAttributeAccessIssue = "none"
reportPrivateUsage = "warning"
reportIncompatibleMethodOverride = "warning"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
